--- a/modules/EosioWasmToolchain.cmake.in
+++ b/modules/EosioWasmToolchain.cmake.in
@@ -1,6 +1,9 @@
 message(STATUS "Setting up Eosio Wasm Toolchain @VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@ at @CDT_ROOT_DIR@")
-set(CMAKE_SYSTEM_NAME WebAssembly)
-
+set(CMAKE_SYSTEM_NAME Generic)
+set(CMAKE_CROSSCOMPILING 1)
+set(CMAKE_C_COMPILER_WORKS 1)
+set(CMAKE_CXX_COMPILER_WORKS 1)
+set(CMAKE_CXX_STANDARD 17)
 set(EOSIO_CDT_VERSION "@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@")
 set(EOSIO_WASMSDK_VERSION "@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@")
 
@@ -26,10 +29,15 @@ set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS)
 # hack for OSX
 set(CMAKE_OSX_SYSROOT="@SYSROOT_DIR@")
 set(CMAKE_OSX_DEPLOYMENT_TARGET="")
+include_directories(
+      @CDT_ROOT_DIR@/eosio.cdt/include/libcxx
+      @CDT_ROOT_DIR@/eosio.cdt/include/libc
+      @CDT_ROOT_DIR@/eosio.cdt/include/)
 
 macro(add_contract CONTRACT_NAME TARGET)
    add_executable( ${TARGET}.wasm ${ARGN} )
    target_compile_options( ${TARGET}.wasm PUBLIC -abigen )
+   set_target_properties( ${TARGET}.wasm PROPERTIES LINKER_LANGUAGE C )
    get_target_property(BINOUTPUT ${TARGET}.wasm BINARY_DIR)
    target_compile_options( ${TARGET}.wasm PUBLIC -abigen_output=${BINOUTPUT}/${TARGET}.abi )
    target_compile_options( ${TARGET}.wasm PUBLIC -contract ${CONTRACT_NAME} )
