--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,9 @@ endif()
 include(GNUInstallDirs)
 
 include(ClangExternalProject.txt)
+include(ToolsExternalProject.txt)
 
 add_subdirectory(external)
-add_subdirectory(tools)
 
 set(WASM_SDK_BUILD true)
 
