rename digest type aliases to checksum; add eosio::signature

--- a/libraries/eosiolib/CMakeLists.txt
+++ b/libraries/eosiolib/CMakeLists.txt
@@ -3,6 +3,7 @@ file(GLOB HEADERS "*.hpp"
 
 add_library(eosio
             eosiolib.cpp
+            crypto.cpp
             ${HEADERS})
 
 target_include_directories(eosio PUBLIC
