added new examples

--- a/examples/hello/CMakeLists.txt
+++ b/examples/hello/CMakeLists.txt
@@ -3,8 +3,8 @@ project(hello_example VERSION 1.0.0)
 
 find_package(eosio.cdt)
 
-### Only generate the wasm
-#add_executable( hello.wasm hello.cpp )
-
 ### Generate the wasm and abi
 add_contract( hello hello hello.cpp )
+
+### add the path to where the ricardian contracts/clauses are found
+target_compile_options( hello.wasm PUBLIC -R${CMAKE_CURRENT_SOURCE_DIR} )
