--- a/tools/ld/eosio-ld.cpp.in
+++ b/tools/ld/eosio-ld.cpp.in
@@ -22,15 +22,25 @@ int main(int argc, const char **argv) {
   Options opts = CreateOptions();
 
   std::string line;
-  if (!eosio::cdt::environment::exec_subprogram("wasm-ld", opts.ld_options))
-     return -1;
-
+  if (opts.native) {
+#ifdef __APPLE__
+     opts.ld_options.push_back("-arch x86_64");
+     opts.ld_options.push_back("-macosx_version_min 10.13");
+     if (!eosio::cdt::environment::exec_subprogram("ld64.lld", opts.ld_options))
+#else
+     if (!eosio::cdt::environment::exec_subprogram("ld.lld", opts.ld_options))
+#endif
+         return -1;
+  } else {
+      if (!eosio::cdt::environment::exec_subprogram("wasm-ld", opts.ld_options))
+         return -1;
+  }
   if ( !llvm::sys::fs::exists( opts.output_fn ) ) {
      return -1;
   }
 
   // finally any post processing
-  if (!fno_post_pass_opt) {
+  if (!fno_post_pass_opt && !opts.native) {
      if ( !llvm::sys::fs::exists( opts.eosio_pp_dir+"/eosio-pp" ) ) {
         std::cout << "Error: eosio.pp not found! (Try reinstalling eosio.wasmsdk)" << std::endl;
         return -1;
