--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -5,3 +5,5 @@ add_subdirectory(libc)
 add_subdirectory(libc++)
 add_subdirectory(eosiolib)
 add_subdirectory(boost)
+add_subdirectory(crt)
+add_subdirectory(catch2)
