--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,33 +1,34 @@
 steps:
-  - command: |
-      echo "+++ :hammer: Building" && \
-      echo 1 | ./build.sh && \
-      echo "--- Compressing build directory :compression:" && \
-      tar -pczf build.tar.gz build/
-    artifact_paths: "build.tar.gz"
-    label: ":darwin: Build"
-    agents:
-      role: "macos-builder"
-    timeout: 60
+  # - command: |
+  #     echo "+++ :hammer: Building" && \
+  #     echo 1 | ./build.sh && \
+  #     echo "--- Compressing build directory :compression:" && \
+  #     tar -pczf build.tar.gz build/
+  #   artifact_paths: "build.tar.gz"
+  #   label: ":darwin: Build"
+  #   agents:
+  #     role: "macos-builder"
+  #   timeout: 60
 
-  - command: |
-        echo "+++ :hammer: Building" && \
-        echo 1 | ./build.sh && \
-        echo "--- Compressing build directory :compression:" && \
-        tar -pczf build.tar.gz build/
-    artifact_paths: "build.tar.gz"
-    label: ":ubuntu: 16.04 Build"
-    agents:
-      role: "automation-builder-fleet"
-      aws:instance-type: "m5d.2xlarge"
-    plugins:
-      docker#v2.0.0:
-        image: "eosio/ci:ubuntu"
-        workdir: /data/job
-    timeout: 60
+  # - command: |
+  #       echo "+++ :hammer: Building" && \
+  #       echo 1 | ./build.sh && \
+  #       echo "--- Compressing build directory :compression:" && \
+  #       tar -pczf build.tar.gz build/
+  #   artifact_paths: "build.tar.gz"
+  #   label: ":ubuntu: 16.04 Build"
+  #   agents:
+  #     role: "automation-builder-fleet"
+  #     aws:instance-type: "m5d.2xlarge"
+  #   plugins:
+  #     docker#v2.0.0:
+  #       image: "eosio/ci:ubuntu"
+  #       workdir: /data/job
+  #   timeout: 60
     
   - command: |
         echo "+++ :hammer: Building" && \
+        free -m && \
         echo 1 | ./build.sh && \
         echo "--- Compressing build directory :compression:" && \
         tar -pczf build.tar.gz build/
@@ -42,53 +43,53 @@ steps:
         workdir: /data/job
     timeout: 60
 
-  - command: |
-        echo "+++ :hammer: Building" && \
-        echo 1 | ./build.sh && \
-        echo "--- Compressing build directory :compression:" && \
-        tar -pczf build.tar.gz build/
-    artifact_paths: "build.tar.gz"
-    label: ":fedora: Build"
-    agents:
-      role: "automation-builder-fleet"
-      aws:instance-type: "m5d.2xlarge"
-    plugins:
-      docker#v2.0.0:
-        image: "eosio/ci:fedora"
-        workdir: /data/job
-    timeout: 60
+  # - command: |
+  #       echo "+++ :hammer: Building" && \
+  #       echo 1 | ./build.sh && \
+  #       echo "--- Compressing build directory :compression:" && \
+  #       tar -pczf build.tar.gz build/
+  #   artifact_paths: "build.tar.gz"
+  #   label: ":fedora: Build"
+  #   agents:
+  #     role: "automation-builder-fleet"
+  #     aws:instance-type: "m5d.2xlarge"
+  #   plugins:
+  #     docker#v2.0.0:
+  #       image: "eosio/ci:fedora"
+  #       workdir: /data/job
+  #   timeout: 60
 
-  - command: |
-        echo "+++ :hammer: Building" && \
-        echo 1 | ./build.sh && \
-        echo "--- Compressing build directory :compression:" && \
-        tar -pczf build.tar.gz build/
-    artifact_paths: "build.tar.gz"
-    label: ":centos: Build"
-    agents:
-      role: "automation-builder-fleet"
-      aws:instance-type: "m5d.2xlarge"
-    plugins:
-      docker#v2.0.0:
-        image: "eosio/ci:centos"
-        workdir: /data/job
-    timeout: 60
+  # - command: |
+  #       echo "+++ :hammer: Building" && \
+  #       echo 1 | ./build.sh && \
+  #       echo "--- Compressing build directory :compression:" && \
+  #       tar -pczf build.tar.gz build/
+  #   artifact_paths: "build.tar.gz"
+  #   label: ":centos: Build"
+  #   agents:
+  #     role: "automation-builder-fleet"
+  #     aws:instance-type: "m5d.2xlarge"
+  #   plugins:
+  #     docker#v2.0.0:
+  #       image: "eosio/ci:centos"
+  #       workdir: /data/job
+  #   timeout: 60
   
-  - command: |
-        echo "+++ :hammer: Building" && \
-        echo 1 | ./build.sh && \
-        echo "--- Compressing build directory :compression:" && \
-        tar -pczf build.tar.gz build/
-    artifact_paths: "build.tar.gz"
-    label: ":aws: Build"
-    agents:
-      role: "automation-builder-fleet"
-      aws:instance-type: "m5d.2xlarge"
-    plugins:
-      docker#v2.0.0:
-        image: "eosio/ci:amazonlinux"
-        workdir: /data/job
-    timeout: 60
+  # - command: |
+  #       echo "+++ :hammer: Building" && \
+  #       echo 1 | ./build.sh && \
+  #       echo "--- Compressing build directory :compression:" && \
+  #       tar -pczf build.tar.gz build/
+  #   artifact_paths: "build.tar.gz"
+  #   label: ":aws: Build"
+  #   agents:
+  #     role: "automation-builder-fleet"
+  #     aws:instance-type: "m5d.2xlarge"
+  #   plugins:
+  #     docker#v2.0.0:
+  #       image: "eosio/ci:amazonlinux"
+  #       workdir: /data/job
+  #   timeout: 60
 
   # - wait
 
