--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -18,8 +18,7 @@ steps:
   #   artifact_paths: "build.tar.gz"
   #   label: ":ubuntu: 16.04 Build"
   #   agents:
-  #     role: "automation-builder-fleet"
-  #     aws:instance-type: "m5d.2xlarge"
+  #     queue: "automation-large-builder-fleet"
   #   plugins:
   #     docker#v2.0.0:
   #       image: "eosio/ci:ubuntu"
@@ -28,15 +27,13 @@ steps:
     
   - command: |
         echo "+++ :hammer: Building" && \
-        free -m && \
         echo 1 | ./build.sh && \
         echo "--- Compressing build directory :compression:" && \
         tar -pczf build.tar.gz build/
     artifact_paths: "build.tar.gz"
     label: ":ubuntu: 18.04 Build"
     agents:
-      role: "automation-builder-fleet"
-      aws:instance-type: "m5d.2xlarge"
+      queue: "automation-large-builder-fleet"
     plugins:
       docker#v2.0.0:
         image: "eosio/ci:ubuntu18"
@@ -51,8 +48,7 @@ steps:
   #   artifact_paths: "build.tar.gz"
   #   label: ":fedora: Build"
   #   agents:
-  #     role: "automation-builder-fleet"
-  #     aws:instance-type: "m5d.2xlarge"
+  #     queue: "automation-large-builder-fleet"
   #   plugins:
   #     docker#v2.0.0:
   #       image: "eosio/ci:fedora"
@@ -67,8 +63,7 @@ steps:
   #   artifact_paths: "build.tar.gz"
   #   label: ":centos: Build"
   #   agents:
-  #     role: "automation-builder-fleet"
-  #     aws:instance-type: "m5d.2xlarge"
+  #     queue: "automation-large-builder-fleet"
   #   plugins:
   #     docker#v2.0.0:
   #       image: "eosio/ci:centos"
@@ -83,8 +78,7 @@ steps:
   #   artifact_paths: "build.tar.gz"
   #   label: ":aws: Build"
   #   agents:
-  #     role: "automation-builder-fleet"
-  #     aws:instance-type: "m5d.2xlarge"
+  #     queue: "automation-large-builder-fleet"
   #   plugins:
   #     docker#v2.0.0:
   #       image: "eosio/ci:amazonlinux"
@@ -101,8 +95,7 @@ steps:
   #       cd /data/job/build/packages && bash generate_package.sh deb
   #   label: ":ubuntu: 16.04 Package builder"
   #   agents:
-  #     role: "automation-builder-fleet"
-  #     aws:instance-type: "m5d.2xlarge"
+  #     queue: "automation-large-builder-fleet"
   #   artifact_paths:
   #     - "build/packages/*.deb"
   #   plugins:
