--- a/libraries/eosiolib/CMakeLists.txt
+++ b/libraries/eosiolib/CMakeLists.txt
@@ -1,16 +1,16 @@
 file(GLOB HEADERS "*.hpp"
                   "*.h")
 
-add_wasm_cxx_library(eosio
+add_library(eosio
             eosiolib.cpp
             crypto.cpp
             ${HEADERS})
 
 target_include_directories(eosio PUBLIC
-                                 "$<BUILD_INTERFACE:${STANDARD_INCLUDES}>"
-                                 $<INSTALL_INTERFACE:${CMAKE_INSTALL_FULL_INCLUDEDIR}>)
+                                 ${CMAKE_SOURCE_DIR}
+                                 ${CMAKE_SOURCE_DIR}/boost/include)
 
-target_link_libraries( eosio c c++ )
+target_link_libraries( eosio c++ c )
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/../eosiolib DESTINATION ${CMAKE_BINARY_DIR}/include FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")
 
