adding support for Mac OSX

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -6,4 +6,4 @@ add_subdirectory(libc++)
 add_subdirectory(eosiolib)
 add_subdirectory(boost)
 add_subdirectory(crt)
-add_subdirectory(catch2)
+#add_subdirectory(catch2)
