fixed for linux and starting llvm/softfloat

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -10,4 +10,4 @@ add_subdirectory(libc)
 add_subdirectory(libc++)
 add_subdirectory(eosiolib)
 add_subdirectory(boost)
-add_subdirectory(crt)
+add_subdirectory(native)
